# brainx_perception_2p5d

./: .gitignore  AGENTS.md  README.md
brainx_perception_2p5d_bringup/: CMakeLists.txt  package.xml
brainx_perception_2p5d_bringup/brainx_perception_2p5d_bringup/: __init__.py  generate_synthetic_bag.py  synthetic_depth_publisher.py  synthetic_scene.py  test_support.py
brainx_perception_2p5d_bringup/config/: table_2p5d.yaml  table_2p5d_floor_dev.yaml
brainx_perception_2p5d_bringup/launch/: table_2p5d_floor_dev.launch.py  table_2p5d_jetson.launch.py  table_2p5d_replay.launch.py  table_2p5d_synthetic.launch.py
brainx_perception_2p5d_bringup/launch/includes/: table_2p5d_pipeline.launch.py
brainx_perception_2p5d_bringup/rviz/: table_2p5d.rviz
brainx_perception_2p5d_bringup/scripts/: generate_synthetic_bag.py  synthetic_depth_publisher.py
brainx_perception_2p5d_bringup/test/: test_replay_equivalence.py  test_smoke.py
brainx_perception_2p5d_map/: CMakeLists.txt  package.xml
brainx_perception_2p5d_map/include/brainx_perception_2p5d_map/: depth_filter.hpp  evidence_grid.hpp
brainx_perception_2p5d_map/src/: depth_filter.cpp  evidence_grid.cpp  map_node.cpp
brainx_perception_2p5d_map/test/: test_evidence_grid.cpp
brainx_perception_2p5d_msgs/: CMakeLists.txt  package.xml
brainx_perception_2p5d_msgs/msg/: EvidenceGrid.msg  SlotEvidence.msg  SlotEvidenceArray.msg  SlotState.msg  SlotStateArray.msg
brainx_perception_2p5d_slots/: CMakeLists.txt  package.xml
brainx_perception_2p5d_slots/include/brainx_perception_2p5d_slots/: slot_layout.hpp  slot_query.hpp  tri_state_fsm.hpp
brainx_perception_2p5d_slots/src/: slot_layout.cpp  slot_query.cpp  slots_node.cpp  tri_state_fsm.cpp
brainx_perception_2p5d_slots/test/: test_slot_layout.cpp  test_slot_query.cpp  test_tri_state_fsm.cpp
docs/: 00_architecture.md  00_project_overview.md  10_architecture.md  10_interfaces.md  20_interfaces.md  20_mac_development_plan.md  30_validation_plan.md  30_workflow.md  40_jetson_handoff.md  40_validation.md  50_open_issues.md  60_replay_ready_handoff.md  70_jetson_session_start.md  80_floor_dev_profile.md  90_current_status.md
