<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>brainx_perception_2p5d_bringup</name>
  <version>0.0.0</version>
  <description>Launch, config, RViz, and synthetic Mac-first bringup for pickup 2.5D perception.</description>
  <maintainer email="snowpoet@naver.com">junho</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>brainx_perception_2p5d_map</depend>
  <depend>brainx_perception_2p5d_slots</depend>
  <depend>brainx_perception_2p5d_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
